fixed spacing in the hero

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,9 +49,9 @@ body {
 
 .swiper-slide .title {
   font-size: 50px;
-  font-weight: 300;
   font-weight: 800;
   margin-bottom: 2rem;
+  margin-top: 4rem;
 }
 
 .swiper-slide .subtitle {
